turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:3: error: illegal start of simple expression
  var x = getX(=
               ^Polygon7:11: error: ')' expected but '}' found.
} 
^