turtleart.polygon7.Polygon7.scala.code
override def run() {
  var n:Int = 7
  var x = getX(=
              var y=getY())
  for(i<-1 to n)
  	{
      avance(80)
      droite(360/n)
    }
  setPos(x,y)
}